@@ -3,13 +3,13 @@ package ch.alpine.subare.ch05.racetrack;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
-import ch.alpine.subare.util.AssertFail;
 import ch.alpine.subare.util.Index;
 import ch.alpine.tensor.Tensor;
 import ch.alpine.tensor.Tensors;
@@ -17,21 +17,21 @@ import ch.alpine.tensor.alg.ArrayQ;
 import ch.alpine.tensor.alg.Dimensions;
 import ch.alpine.tensor.io.ResourceData;
 
-public class RacetrackTest {
+class RacetrackTest {
   @Test
-  public void testStartAction() {
+  void testStartAction() {
     Racetrack racetrack = new Racetrack(ResourceData.of("/ch05/track0.png"), 3);
     Index statesIndex = Index.build(racetrack.states());
     assertEquals(statesIndex.size(), 724);
     assertEquals(racetrack.statesStart, Tensors.fromString("{{1, 0, 0, 0}, {2, 0, 0, 0}, {3, 0, 0, 0}}"));
     assertEquals(racetrack.statesTerminal.length() % 3, 1);
-    AssertFail.of(() -> racetrack.actions(Tensors.vector(1, 0, 0)));
+    assertThrows(Exception.class, () -> racetrack.actions(Tensors.vector(1, 0, 0)));
   }
 
   @Test
-  public void testMove() {
+  void testMove() {
     Racetrack racetrack = new Racetrack(ResourceData.of("/ch05/track0.png"), 3);
-    assertEquals(Dimensions.of(racetrack.image()), Arrays.asList(8, 11, 4));
+    assertEquals(Dimensions.of(racetrack.image()), List.of(8, 11, 4));
     Tensor start = Tensors.vector(1, 0, 0, 0);
     assertTrue(racetrack.isStart(start));
     assertFalse(racetrack.isTerminal(start));
@@ -42,14 +42,14 @@ public class RacetrackTest {
   }
 
   @Test
-  public void testSome() {
+  void testSome() {
     Racetrack racetrack = new Racetrack(ResourceData.of("/ch05/track0.png"), 3);
     for (Tensor state : racetrack.states())
       racetrack.actions(state);
   }
 
   @Test
-  public void testArray() {
+  void testArray() {
     Racetrack racetrack = new Racetrack(ResourceData.of("/ch05/track0.png"), 3);
     ArrayQ.require(racetrack.actions);
   }
